docs: .env.example update

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
-PORT=
+# Mongo Connection String
 DB_CONNECTION=
+# Backend Port
+PORT=
 FRONTEND_URL=
+# Google Auth
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+JWT_SECRET=
